Separate the Motion and Draw Code

--- a/ball_with_mouse_paddle/game.html
+++ b/ball_with_mouse_paddle/game.html
@@ -31,6 +31,11 @@
             }
 
             function updateAll() {
+                moveAll();
+                drawAll();
+            }
+
+            function moveAll() {
                 ballX += ballSpeedX;                
                 ballY += ballSpeedY;                
 
@@ -46,15 +51,17 @@
                 if(ballY > canvas.height) {
                     ballSpeedY *= -1;
                 }
+            }
 
+            function drawAll() {
                 canvasContext.fillStyle = 'black';
                 canvasContext.fillRect(0,0, canvas.width, canvas.height);
 
-                canvasContext.fillStyle = 'white';
+                canvasContext.fillStyle = 'red';
                 canvasContext.beginPath();
                 canvasContext.arc(ballX, ballY, 10, 0, Math.PI*2, true);
                 canvasContext.fill();
-            }
+            }                                        
         </script>
     </body>
 </html>
