--- a/ball_with_mouse_paddle/game.html
+++ b/ball_with_mouse_paddle/game.html
@@ -54,14 +54,21 @@
             }
 
             function drawAll() {
-                canvasContext.fillStyle = 'black';
-                canvasContext.fillRect(0,0, canvas.width, canvas.height);
+                colorRect(0,0, canvas.width, canvas.height, 'black');
+                colorCircle(ballX, ballY, 10, 'red');
+            }                
+            
+            function colorRect(topLeftX, topLeftY, boxWidth, boxHeight, fillColor) {
+                canvasContext.fillStyle = fillColor;
+                canvasContext.fillRect(topLeftX, topLeftY, boxWidth, boxHeight);
+            }
 
-                canvasContext.fillStyle = 'red';
+            function colorCircle(centerX, centerY, radius, fillColor) {
+                canvasContext.fillStyle = fillColor;
                 canvasContext.beginPath();
-                canvasContext.arc(ballX, ballY, 10, 0, Math.PI*2, true);
+                canvasContext.arc(centerX, centerY, radius, 0, Math.PI*2, true);
                 canvasContext.fill();
-            }                                        
+            }
         </script>
     </body>
 </html>
